--- a/packages/create-cloudflare/package.json
+++ b/packages/create-cloudflare/package.json
@@ -54,6 +54,7 @@
 		"execa": "^7.1.1",
 		"haikunator": "^2.1.2",
 		"log-update": "^5.0.1",
+		"open": "^8.4.0",
 		"recast": "^0.22.0",
 		"typescript": "^5.0.2",
 		"undici": "^5.22.0",
