Turborepo Workspaces This adds isolated caching for workspaces isolated tasks and localized pipelines more complex packages to exist in the monorepo

--- a/fixtures/pages-plugin-example/package.json
+++ b/fixtures/pages-plugin-example/package.json
@@ -13,5 +13,8 @@
 	"scripts": {
 		"build": "npx wrangler pages functions build --plugin --outdir=dist",
 		"check:type": "tsc"
+	},
+	"dependencies": {
+		"wrangler": "*"
 	}
 }
