--- a/turbo.json
+++ b/turbo.json
@@ -2,23 +2,11 @@
 	"$schema": "http://turbo.build/schema.json",
 	"pipeline": {
 		"dev": {},
-		"build": {
-			"dependsOn": ["^build"],
-			"outputs": ["miniflare-dist/**", "emitted-types/**", "wrangler-dist/**"]
-		},
+		"build": { "dependsOn": ["^build"] },
 		"test": {
 			"dependsOn": [],
 			"inputs": ["src/**/*.tsx", "src/**/*.ts", "test/**/*.ts", "test/**/*.tsx"]
 		},
-		"lint": {},
-		"@cloudflare/prerelease-registry#build": {
-			"dependsOn": ["wrangler#build"]
-		},
-		"@cloudflare/pages-shared#build": {
-			"dependsOn": ["wrangler#build"]
-		},
-		"pages-plugin-example#build": {
-			"dependsOn": ["wrangler#build"]
-		}
+		"lint": {}
 	}
 }
