presistent mode for dev keyword lets turborepo know its something that will be watched or run long term

--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,10 @@
 {
 	"$schema": "http://turbo.build/schema.json",
 	"pipeline": {
-		"dev": {},
+		"dev": {
+			"persistent": true,
+			"cache": false
+		},
 		"build": { "dependsOn": ["^build"] },
 		"test": {
 			"dependsOn": [],
