--- a/packages/create-cloudflare/package.json
+++ b/packages/create-cloudflare/package.json
@@ -27,8 +27,8 @@
 	],
 	"scripts": {
 		"build": "node scripts/build.js",
-		"check:lint": "eslint .",
 		"check:type": "tsc --noEmit",
+		"lint": "eslint",
 		"test:e2e": "npm run build && vitest run --config ./vitest-e2e.config.ts",
 		"test:unit": "vitest run --config ./vitest.config.ts",
 		"watch": "node scripts/build.js --watch"
