--- a/packages/prerelease-registry/package.json
+++ b/packages/prerelease-registry/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"build": "npx wrangler pages functions build --fallback-service='' ./functions/routes --outdir=dist",
 		"check:type": "tsc",
+		"lint": "eslint",
 		"prepublish": "npm run build",
 		"publish": "npx wrangler deploy dist/index.js",
 		"prestart": "npm run build",
