--- a/packages/workers.new/package.json
+++ b/packages/workers.new/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"deploy": "wrangler deploy src/index.ts",
 		"dev": "wrangler dev src/index.ts --local",
+		"lint": "eslint",
 		"test": "vitest"
 	},
 	"devDependencies": {
