--- a/packages/edge-preview-authenticated-proxy/package.json
+++ b/packages/edge-preview-authenticated-proxy/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
+		"lint": "eslint",
 		"publish": "wrangler deploy",
 		"start": "wrangler dev",
 		"test": "vitest"
