--- a/packages/format-errors/package.json
+++ b/packages/format-errors/package.json
@@ -3,6 +3,7 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
+		"lint": "eslint",
 		"publish": "wrangler deploy",
 		"start": "wrangler dev"
 	},
