Turn ESLint and TSConfig into a package The monorepo now isolates its configs to packages utilizing them, configurations are now monorepo packages

--- a/packages/format-errors/package.json
+++ b/packages/format-errors/package.json
@@ -12,6 +12,8 @@
 		"mustache": "^4.2.0",
 		"typescript": "^5.0.2",
 		"wrangler": "*",
-		"zod": "^3.21.4"
+		"zod": "^3.21.4",
+		"eslint-worker-config": "*",
+		"tsconfig": "*"
 	}
 }
