--- a/packages/wranglerjs-compat-webpack-plugin/tsconfig.json
+++ b/packages/wranglerjs-compat-webpack-plugin/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "../../tsconfig.json",
+	"extends": "tsconfig/tsconfig.json",
 	"compilerOptions": {
 		"target": "ES2018",
 		"module": "ESNext",
