--- a/packages/create-cloudflare/tsconfig.json
+++ b/packages/create-cloudflare/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "../../tsconfig.json",
+	"extends": "tsconfig/tsconfig.json",
 	"include": ["**/*.ts"],
 	"exclude": ["node_modules", "dist", "templates", "**/templates/**"],
 	"compilerOptions": {
