--- a/packages/edge-preview-authenticated-proxy/package.json
+++ b/packages/edge-preview-authenticated-proxy/package.json
@@ -13,6 +13,7 @@
 		"cookie": "^0.5.0",
 		"toucan-js": "^3.1.0",
 		"vitest": "^0.31.0",
-		"wrangler": "*"
+		"wrangler": "*",
+		"eslint-worker-config": "*"
 	}
 }
