--- a/packages/workers.new/tsconfig.json
+++ b/packages/workers.new/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "../../tsconfig.json",
+	"extends": "tsconfig/tsconfig.json",
 	"compilerOptions": {
 		"strict": true,
 		"alwaysStrict": true,
