--- a/packages/wrangler/package.json
+++ b/packages/wrangler/package.json
@@ -138,6 +138,7 @@
 		"concurrently": "^7.2.2",
 		"devtools-protocol": "^0.0.955664",
 		"dotenv": "^16.0.0",
+		"eslint-worker-config": "*",
 		"execa": "^6.1.0",
 		"express": "^4.18.1",
 		"finalhandler": "^1.2.0",
@@ -176,6 +177,7 @@
 		"timeago.js": "^4.0.2",
 		"tmp-promise": "^3.0.3",
 		"ts-dedent": "^2.2.0",
+		"tsconfig": "*",
 		"undici": "5.20.0",
 		"update-check": "^1.5.4",
 		"vitest": "^0.31.0",
