--- a/packages/wranglerjs-compat-webpack-plugin/package.json
+++ b/packages/wranglerjs-compat-webpack-plugin/package.json
@@ -56,12 +56,14 @@
 		"@types/tar": "^6.1.1",
 		"@types/webpack": "^4.41.32",
 		"esbuild": "0.16.3",
+		"eslint-worker-config": "*",
 		"execa": "^6.1.0",
 		"jest": "^27.5.1",
 		"jest-fetch-mock": "^3.0.3",
 		"npm-run-all": "^4.1.5",
 		"tar": "^6.1.11",
 		"tosource": "^2.0.0-alpha.3",
+		"tsconfig": "*",
 		"typescript": "^4.6.3",
 		"undici": "^5.9.1",
 		"webpack": "^4.46.0"
