Change node version to 16.14 in test-c3 workflow to fix execa

--- a/.github/workflows/test-c3.yml
+++ b/.github/workflows/test-c3.yml
@@ -13,8 +13,7 @@ jobs:
     name: "Checks"
     strategy:
       matrix:
-        # os: [ubuntu-latest, windows-latest, macos-latest]
-        os: [windows-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout Repo
