--- a/.github/workflows/test-c3.yml
+++ b/.github/workflows/test-c3.yml
@@ -13,7 +13,9 @@ jobs:
     name: "Checks"
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        # TODO: add back windows
+        # os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout Repo
